--- a/_publications/20150312_westra.md
+++ b/_publications/20150312_westra.md
@@ -3,10 +3,10 @@ title: "Parasite exposure drives selective evolution of constitutive verses indu
 authors: "Westra ER, van Houte S, Oyesiku-Blakemore S, Makin B, Broniewski JM, Best A, **Bondy-Denomy J**, Davidson A, Boots M, Buckling A."
 journal: 'Current Biology'
 pub_date: '2015-03-12'
-#image: '/static/img/pub/lina_IC_acrs.png'
+#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
 pmid: '25772450'
 #pmcid: 'PMC4935067'
-pdf: '/static/pdf/publications/westra_2015.pdf'
+pdf: '{{ site.baseurl }}/static/pdf/publications/westra_2015.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
