--- a/_publications/20221031_jingwen.md
+++ b/_publications/20221031_jingwen.md
@@ -3,9 +3,9 @@ title: "Bacteriophage genome engineering with CRISPR–Cas13a"
 authors: "**Jingwen Guan, Agnès Oromí-Bosch, Senén D. Mendoza, Shweta Karambelkar, Joel D. Berry & Joseph Bondy-Denomy **"
 journal: 'Nature Microbiology'
 pub_date: '2022-10-31'
-image: '/static/img/pub/jingwen-2022.png'
+image: '{{ site.baseurl }}/static/img/pub/jingwen-2022.png'
 pmid: '36316452'
-pdf: '/static/pdf/publications/jingwen-2022.pdf'
+pdf: '{{ site.baseurl }}/static/pdf/publications/jingwen-2022.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
