--- a/_publications/20121101_cady.md
+++ b/_publications/20121101_cady.md
@@ -3,10 +3,10 @@ title: "The CRISPR/Cas adaptive immune system of Pseudomonas aeruginosa mediates
 authors: "Cady KC&#42;, **Bondy-Denomy J&#42;**, Heussler GE, Davidson AR, O'Toole GA."
 journal: 'Journal of Bacteriology'
 pub_date: '2012-11-01'
-#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
+#image: '/jbd-lab/static/img/pub/lina_IC_acrs.png'
 pmid: '22885297'
 pmcid: 'PMC3486085'
-pdf: '{{ site.baseurl }}/static/pdf/publications/cady_2012.pdf'
+pdf: '/jbd-lab/static/pdf/publications/cady_2012.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
