--- a/_publications/20130301_phee.md
+++ b/_publications/20130301_phee.md
@@ -3,10 +3,10 @@ title: "Efficacy of bacteriophage treatment on Pseudomonas aeruginosa biofilms"
 authors: "Phee A, **Bondy-Denomy J**, Kishen A, Basrani B, Azarpazhooh A, Maxwell K."
 journal: 'Journal of Endodontics'
 pub_date: '2013-03-01'
-#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
+#image: '/jbd-lab/static/img/pub/lina_IC_acrs.png'
 pmid: '23402508'
 #pmcid: 'PMC4931913'
-pdf: '{{ site.baseurl }}/static/pdf/publications/phee_2013.pdf'
+pdf: '/jbd-lab/static/pdf/publications/phee_2013.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
