--- a/_publications/20160413_van houte.md
+++ b/_publications/20160413_van houte.md
@@ -3,10 +3,10 @@ title: "The diversity-generating benefits of a prokaryotic adaptive immune syste
 authors: "van Houte S, Ekroth AK, Broniewski JM, Chabas H, Ben Ashby, **Bondy-Denomy J**, Gandon S, Boots M, Paterson S, Buckling A, Westra ER."
 journal: 'Nature'
 pub_date: '2016-04-13'
-#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
+#image: '/jbd-lab/static/img/pub/lina_IC_acrs.png'
 pmid: '27074511'
 pmcid: 'PMC4935084'
-pdf: '{{ site.baseurl }}/static/pdf/publications/van houte_2016.pdf'
+pdf: '/jbd-lab/static/pdf/publications/van houte_2016.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
