--- a/_publications/20161011_maxwell.md
+++ b/_publications/20161011_maxwell.md
@@ -3,10 +3,10 @@ title: "Quorum sensing controls the Pseudomonas aeruginosa CRISPR-Cas adaptive i
 authors: "Høyland-Kroghsbo NM, Paczkowski J, Mukherjee S, Broniewski J, Westra E, **Bondy-Denomy J.**, Bassler BL"
 journal: 'Nature Communications'
 pub_date: '2016-10-11'
-#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
+#image: '/jbd-lab/static/img/pub/lina_IC_acrs.png'
 pmid: '27725669'
 pmcid: 'PMC5062604'
-pdf: '{{ site.baseurl }}/static/pdf/publications/maxwell_2016.pdf'
+pdf: '/jbd-lab/static/pdf/publications/maxwell_2016.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
