--- a/_publications/20170929_borges.md
+++ b/_publications/20170929_borges.md
@@ -3,10 +3,10 @@ title: "The Discovery, Mechanisms, and Evolutionary Impact of Anti-CRISPRs"
 authors: "**Borges AL**, Davidson AR, **Bondy-Denomy J.**"
 journal: 'Annual Review of Virology'
 pub_date: '2017-07-29'
-#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
+#image: '/jbd-lab/static/img/pub/lina_IC_acrs.png'
 pmid: '28749735'
 pmcid: 'PMC6039114'
-pdf: '{{ site.baseurl }}/static/pdf/publications/borges_2017.pdf'
+pdf: '/jbd-lab/static/pdf/publications/borges_2017.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
