--- a/_publications/20181227_jiang.md
+++ b/_publications/20181227_jiang.md
@@ -3,10 +3,10 @@ title: "Temperature-responsive competitive inhibition of CRISPR-Cas9"
 authors: "Jiang F&#42;, Liu JJ&#42;, **Osuna BA&#42;**, Xu M, **Berry JD, Rauch BJ**, Nogales E, **Bondy-Denomy J**, Doudna JA."
 journal: 'Nature Communications'
 pub_date: '2018-12-27'
-#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
+#image: '/jbd-lab/static/img/pub/lina_IC_acrs.png'
 pmid: '30595438'
 pmcid: 'PMC6480404'
-pdf: '{{ site.baseurl }}/static/pdf/publications/jiang_2018.pdf'
+pdf: '/jbd-lab/static/pdf/publications/jiang_2018.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
