--- a/_publications/20200423_mahendra.md
+++ b/_publications/20200423_mahendra.md
@@ -3,10 +3,10 @@ title: "Broad-spectrum anti-CRISPR facilitate horizontal gene transfer"
 authors: "**Mahendra C**, Christie KA, **Osuna BA, Pinilla-Redondo R**, Kleinstiver BP, **Bondy-Denomy J.**"
 journal: 'Nature Microbiololgy'
 pub_date: '2020-04-23'
-image: '{{ site.baseurl }}/static/img/pub/mahendra_2020.png'
+image: '/jbd-lab/static/img/pub/mahendra_2020.png'
 pmid: '32218510'
 pmcid: 'PMC7194981'
-pdf: '{{ site.baseurl }}/static/pdf/publications/mahendra_2020.pdf'
+pdf: '/jbd-lab/static/pdf/publications/mahendra_2020.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
