--- a/_publications/20160331_rao.md
+++ b/_publications/20160331_rao.md
@@ -3,10 +3,10 @@ title: "Active and adaptive Legionella CRISPR-Cas reveals a recurrent challenge 
 authors: "Rao C, Guyard C, Pelaz C, Wasserscheid J, **Bondy-Denomy J**, Dewar K, Ensminger AW."
 journal: 'Cell Microbiology'
 pub_date: '2016-03-31'
-#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
+#image: '/jbd-lab/static/img/pub/lina_IC_acrs.png'
 pmid: '26936325'
 pmcid: 'PMC5071653'
-pdf: '{{ site.baseurl }}/static/pdf/publications/rao_2016.pdf'
+pdf: '/jbd-lab/static/pdf/publications/rao_2016.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
