--- a/_publications/20161229_rauch.md
+++ b/_publications/20161229_rauch.md
@@ -3,10 +3,10 @@ title: "Inhibition of CRISPR-Cas9 with bacteriophage proteins"
 authors: "**Rauch BJ**, Silvis MR, Hultquist JF, **Waters CS**, McGregor MJ, Krogan NJ, **Bondy-Denomy J.**"
 journal: 'Cell'
 pub_date: '2017-01-12'
-#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
+#image: '/jbd-lab/static/img/pub/lina_IC_acrs.png'
 pmid: '28041849'
 pmcid: 'PMC5235966'
-pdf: '{{ site.baseurl }}/static/pdf/publications/rauch_2017.pdf'
+pdf: '/jbd-lab/static/pdf/publications/rauch_2017.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
