--- a/_publications/20170712_shin.md
+++ b/_publications/20170712_shin.md
@@ -3,10 +3,10 @@ title: "Disabling Cas9 by an anti-CRISPR DNA mimic"
 authors: "Shin J, Jiang F, Liu JJ, Bray NL, **Rauch BJ**, Baik SH, Nogales E, **Bondy-Denomy J**, Corn JE, Doudna JA."
 journal: 'Science Advances'
 pub_date: '2017-07-12'
-#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
+#image: '/jbd-lab/static/img/pub/lina_IC_acrs.png'
 pmid: '28706995'
 pmcid: 'PMC5507636'
-pdf: '{{ site.baseurl }}/static/pdf/publications/shin_2017.pdf'
+pdf: '/jbd-lab/static/pdf/publications/shin_2017.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
