--- a/_publications/20190722_roux.md
+++ b/_publications/20190722_roux.md
@@ -3,10 +3,10 @@ title: "Cryptic inoviruses revealed as pervasive in bacteria and archaea in Eart
 authors: "Roux S, Krupovic M, Daly RA, **Borges AL**, Nayfach S, Schulz F, Sharrar A, Matheus Carnevali PB, Cheng JF, Ivanova NN, **Bondy-Denomy J**, Wrighton KC, Woyke T, Visel A, Kyrpides NC, Eloe-Fadrosh EA."
 journal: 'Nature Microbiology'
 pub_date: '2019-07-22'
-#image: '{{ site.baseurl }}/static/img/pub/lina_IC_acrs.png'
+#image: '/jbd-lab/static/img/pub/lina_IC_acrs.png'
 pmid: '31332386'
 pmcid: 'PMC6813254'
-pdf: '{{ site.baseurl }}/static/pdf/publications/roux_2019.pdf'
+pdf: '/jbd-lab/static/pdf/publications/roux_2019.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
