--- a/_publications/20200316_marino.md
+++ b/_publications/20200316_marino.md
@@ -3,10 +3,10 @@ title: "Anti-CRISPR protein applications: Natural breaks for CRISPR-Cas technolo
 authors: "**Marino N, Pinilla-Redondo R, Csörgő B, Bondy-Denomy J.**"
 journal: 'Nature Methods'
 pub_date: '2020-03-16'
-image: '{{ site.baseurl }}/static/img/pub/marino_2020.png'
+image: '/jbd-lab/static/img/pub/marino_2020.png'
 pmid: '32203383'
 #pmcid: 'PMC7190418'
-pdf: '{{ site.baseurl }}/static/pdf/publications/marino_2020.pdf'
+pdf: '/jbd-lab/static/pdf/publications/marino_2020.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
