--- a/_publications/20200605_wiegand.md
+++ b/_publications/20200605_wiegand.md
@@ -3,10 +3,10 @@ title: "Structures and strategies of anti-CRISPR-mediated immune suppression"
 authors: "Wiegand T, **Karambelkar S, Bondy-Denomy J**, Wiedenheft B."
 journal: 'Annual Reviews Microbiology'
 pub_date: '2020-06-05'
-image: '{{ site.baseurl }}/static/img/pub/wiegand_2020.png'
+image: '/jbd-lab/static/img/pub/wiegand_2020.png'
 pmid: '32503371'
 pmcid: 'PMC7712631'
-pdf: '{{ site.baseurl }}/static/pdf/publications/wiegand_2020.pdf'
+pdf: '/jbd-lab/static/pdf/publications/wiegand_2020.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
