--- a/_publications/20201009_csorgo.md
+++ b/_publications/20201009_csorgo.md
@@ -3,10 +3,10 @@ title: "A compact Cascade-Cas3 system for targeted genome engineering"
 authors: "**Csörgő B, León LM**, Chau-Ly IJ, Vasquez-Rifo A, **Berry JD, Mahendra C**, Crawford ED, Lewis JD, **Bondy-Denomy J.**"
 journal: 'Nature methods'
 pub_date: '2020-10-09'
-image: '{{ site.baseurl }}/static/img/pub/csorgo_2020.png'
+image: '/jbd-lab/static/img/pub/csorgo_2020.png'
 pmid: '33077967'
 #pmcid: ''
-pdf: '{{ site.baseurl }}/static/pdf/publications/csorgo_2020.pdf'
+pdf: '/jbd-lab/static/pdf/publications/csorgo_2020.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
