--- a/_publications/20220225_Guan.md
+++ b/_publications/20220225_Guan.md
@@ -3,9 +3,9 @@ title: "Bacteriophage genome engineering with CRISPR–Cas13a"
 authors: "Jingwen Guan, Agnès Oromí-Bosch, Senén D. Mendoza, Shweta Karambelkar, Joel D. Berry and Joseph Bondy-Denomy"
 journal: 'Nature Microbiology'
 pub_date: '2022-02-25'
-image: '/jbd-lab/static/img/pub/cas13.png'
+image: '/static/img/pub/cas13.png'
 pmid: '36316452'
-pdf: '/jbd-lab/static/pdf/publications/2022-Guan.pdf'
+pdf: '/static/pdf/publications/2022-Guan.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
