--- a/_publications/20220413_huiting.md
+++ b/_publications/20220413_huiting.md
@@ -3,9 +3,9 @@ title: "A single bacterial enzyme i(NHI)bits phage DNA replication"
 authors: "**Erin Huiting and Joseph Bondy-Denomy**"
 journal: 'Cell Host and Microbe'
 pub_date: '2022-04-13'
-image: '/jbd-lab/static/img/pub/nhi.png'
+image: '/static/img/pub/nhi.png'
 pmid: '35421333'
-pdf: '/jbd-lab/static/pdf/publications/2022-Nhi.pdf'
+pdf: '/static/pdf/publications/2022-Nhi.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
