--- a/_publications/20210512_li.md
+++ b/_publications/20210512_li.md
@@ -3,10 +3,10 @@ title: "Anti-CRISPRs go viral: The infection biology of CRISPR-Cas inhibitors"
 authors: "**Y Li, Bondy-Denomy J.**"
 journal: 'Cell Host and Microbe'
 pub_date: '2021-05-12'
-image: '/jbd-lab/static/img/pub/li_2021.png'
+image: '/static/img/pub/li_2021.png'
 pmid: '33444542'
 pmcid: 'PMC8122014'
-pdf: '/jbd-lab/static/pdf/publications/li_2021.pdf'
+pdf: '/static/pdf/publications/li_2021.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
