--- a/_publications/20220602_johnson.md
+++ b/_publications/20220602_johnson.md
@@ -3,9 +3,9 @@ title: "Lack of Cas13a inhibition by anti-CRISPR proteins from Leptotrichia prop
 authors: "**Matthew C. Johnson**, Logan T. Hille, Benjamin P. Kleinstiver, Alexander J. Meeske, Joseph Bondy-Denomy"
 journal: 'Molecular Cell'
 pub_date: '2022-06-02'
-image: '/jbd-lab/static/img/pub/Matt.png'
+image: '/static/img/pub/Matt.png'
 pmid: '35623354'
-pdf: '/jbd-lab/static/pdf/publications/2022-Johnson.pdf'
+pdf: '/static/pdf/publications/2022-Johnson.pdf'
 #links:
 #- name: Davidson lab @ University of Toronto
 #  url: http://individual.utoronto.ca/davidsonlab/Davidson_lab/Home.html
