--- a/_publications/20221111_johnson.md
+++ b/_publications/20221111_johnson.md
@@ -1,11 +1,11 @@
 ---
 title: "Core Defense Hotspots within Pseudomonas aeruginosa are a consistent and rich source of anti-phage defense systems"
 authors: "**Matthew C. Johnson**, **Eric Laderman**, **Erin Huiting**, Charles Zhang, Alan Davidson, **Joseph Bondy-Denomy**"
-journal: 'Biorxiv'
-pub_date: '2022-11-11'
+journal: 'Nucleic Acids Research'
+pub_date: '2023-06-09'
 image: '/static/img/pub/cDHS_johnson.png'
-pmid: ''
-pdf: '/static/pdf/publications/2022_cDHS_Johnson.pdf'
+pmid: '37140042'
+pdf: '/static/pdf/publications/johnson_2023.pdf'
 zenodo:
   - code: "7754202"
 #links:
