--- a/_publications/20230101_fossati.md
+++ b/_publications/20230101_fossati.md
@@ -1,8 +1,8 @@
 ---
 title: "Next-generation interaction proteomics for quantitative Jumbophage-bacteria interaction mapping"
-authors: "Andrea Fossati, Deepto Mozumdar, Claire Kokontis, Eliza Nieweglowska, Melissa Mendez, Adrian Pelin, Yuping Li, Baron Guo, Nevan J. Krogan, David A. Agard, Joseph Bondy-Denomy and Danielle L. Swaney"
-journal: 'Biorxiv'
-pub_date: '2023-01-01'
+authors: "Andrea Fossati, **Deepto Mozumdar**, **Claire Kokontis**, Eliza Nieweglowska, Melissa Mendez, Adrian Pelin, **Yuping Li**, Baron Guo, Nevan J. Krogan, David A. Agard, **Joseph Bondy-Denomy** and Danielle L. Swaney"
+journal: 'Nature Communications'
+pub_date: '2023-08-24'
 image: '/static/img/pub/fossati.png'
-pdf: '/static/pdf/publications/2023-Fossati.pdf'
+pdf: '/static/pdf/publications/fossati_2023.pdf'
 ---
