--- a/_publications/20230101_fossati.md
+++ b/_publications/20230101_fossati.md
@@ -4,5 +4,6 @@ authors: "Andrea Fossati, **Deepto Mozumdar**, **Claire Kokontis**, Eliza Nieweg
 journal: 'Nature Communications'
 pub_date: '2023-08-24'
 image: '/static/img/pub/fossati.png'
+pmid: '37620325'
 pdf: '/static/pdf/publications/fossati_2023.pdf'
 ---
