--- a/_publications/20230705_silas.md
+++ b/_publications/20230705_silas.md
@@ -1,5 +1,5 @@
 ---
-title: "Activation of programmed cell death and counter-defense 1 functions of phage accessory genes"
+title: "Activation of programmed cell death and counter-defense functions of phage accessory genes"
 authors: "**Sukrit Silas**, **Héloïse Carion**, Kira S. Makarova, **Eric Laderman**, David Sanchez Godinez, **Matthew Johnson**, Andrea Fossati, Danielle Swaney, Michael Bocek, Eugene V. Koonin, **Joseph Bondy-Denomy**"
 journal: 'bioRxiv'
 pub_date: '2023-07-05'
