Update 20230701_cao mol cell.md

--- a/_publications/20230701_cao.md
+++ b/_publications/20230701_cao.md
@@ -1,11 +1,11 @@
 ---
 title: "Phage anti-CBASS protein simultaneously sequesters cyclic trinucleotides and dinucleotides"
 authors: "Xueli Cao, Yu Xiao, **Erin Huiting**, Xujun Cao, Dong Li, Jie Ren, Linlin Guan, Yu Wang, Lingyin Li, **Joseph Bondy-Denomy**, Yue Feng"
-journal: 'bioRxiv'
+journal: 'Molecular Cell'
 pub_date: '2023-07-01'
 image: '/static/img/pub/cao_2023.png'
-pmid: '37398474'
-pdf: '/static/pdf/publications/cao_2023.pdf'
+pmid: '38103556'
+pdf: '/static/pdf/publications/cao2_2023.pdf'
 #zenodo:
 #links:
 #- name: Davidson lab @ University of Toronto
